# openstudio-metadata-utility

./: pyproject.toml
examples/metadata_generator/: graph_builder.ipynb  graph_builder.py
examples/metadata_generator/data/: fullServiceRestaraunt.osm  hospital.osm  largeHotel.osm  mediumOffice.osm  midriseApartment.osm  outpatient.osm  primarySchool.osm  quickServiceRestaraunt.osm  retailStripmall.osm  secondarySchool.osm  smallHotel.osm  smallOffice.osm  warehouse.osm
openstudio_metadata_utility/: openstudio_graph.py  translator.py  utilities.py
